# novacoin

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Hancoin-qt.pro  INSTALL  LICENSE  Makefile  README.md  blackcoin-qt.pro  index.html  novacoin-qt.pro  params.json
MSVC/: HanCoinSolution.sln
MSVC/libcommon/: libcommon.vcxproj
MSVC/mynovacoin/: mynovacoin.vcxproj
MSVC/mynovacoinqt/: mynovacoinqt.vcxproj
contrib/debian/: blackcoin-qt.desktop  blackcoin-qt.install  blackcoin-qt.lintian-overrides  blackcoin-qt.protocol  blackcoind.examples  blackcoind.install  blackcoind.lintian-overrides  blackcoind.manpages  changelog  control  copyright  rules  watch
contrib/debian/examples/: blackcoin.conf  novacoin.conf
contrib/debian/manpages/: blackcoin.conf.5  blackcoind.1  novacoin.conf.5  novacoind.1
contrib/gitian-descriptors/: README  deps-win32.yml  gitian-win32.yml  gitian.yml
contrib/linearize/: example-linearize.cfg  linearize-hashes.py
contrib/mingw64cross/: mingw-w64.cmake
dependencies/boost/: build.sh  setup.sh
dependencies/qt/: scenegraph.patch  setup.sh
dependencies/zlib/: build.sh
doc/: Doxyfile  README  README_windows.txt  assets-attribution.txt  build-msw.txt  build-osx.txt  build-ubuntu.txt  building novacoin-qt for android under Windows.txt  building novacoind and novacoinqt under Windows with MSVC.txt  building novacoind and novacoinqt under Windows with MinGW.txt  coding.txt  crosscompiling_building Windows binary under Unix.txt
doc/obsolete/: build-osx.txt  crosscompiling_building Windows binary under Unix.txt  readme-qt.rst
mingw64_deps/: README.md
mingw64_deps/boost/: build.sh  setup.sh
mingw64_deps/db/: build.sh  setup.sh
mingw64_deps/openssl/: build.sh  setup.sh
mingw64_deps/png/: build.sh  setup.sh
mingw64_deps/qt/: build.sh  setup.sh  stack_protector.patch
mingw64_deps/zlib/: build.sh  setup.sh
share/: genbuild.sh
share/qt/: Info.plist
src/: CMakeLists.txt  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.cpp  base58.h  bignum.cpp  bignum.h  bitcoin.rc  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  chainparams.cpp  chainparams.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.cpp  coincontrol.h  compat.h  core.h  crypter.cpp  crypter.h  db.cpp  db.h  ecies.cpp  hash.h  init.cpp  init.h  ipcollector.cpp  irc.cpp  kernel.cpp  kernel.h  kernel_worker.cpp  kernel_worker.h  (+72 more)
src/additional/: build.sh  cerrno_include.patch  fix_cerrno.sh
src/crypto/scrypt/generic/: scrypt-generic.cpp
src/crypto/scrypt/intrin/: scrypt-intrin.cpp
src/extjs/: Makefile  extfs.cpp  extfs.h  index.cpp  index.h  index.html  ux-debug.js
src/extjs/forms/: addresses.js  info.js  peerinfo.js
src/extjs/resources/css/: classic__theme-triton__resources__theme-triton-all-debug_1.css  classic__theme-triton__resources__theme-triton-all-debug_2.css  ux__ux-all-debug.css
src/json/: json_spirit_reader_template.h
src/qt/: aboutdialog.ui  addressbookpage.cpp  addressbookpage.h  addressbookpage.ui  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiutil.cpp  guiutil.h  intro.cpp  intro.h  mintingtablemodel.cpp  multisigdialog.cpp  multisiginputentry.cpp  optionsdialog.cpp  optionsdialog.ui  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  qtipcserver.cpp  rpcconsole.cpp  rpcconsole.h  rpcconsole.ui  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  (+10 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_AR.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  (+26 more)
src/qt/res/: bitcoin-qt.rc
src/test/: DoS_tests.cpp  multisig_tests.cpp  script_tests.cpp  transaction_tests.cpp  util_tests.cpp
